--- a/src/components/HeaderTools.css
+++ b/src/components/HeaderTools.css
@@ -5,6 +5,11 @@ header {
   justify-content: space-between;
 }
 
+header div {
+  border: 2px solid black;
+  padding-left: 4px;
+}
+
 header p {
   display: inline;
   padding-right: 8px;
