--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,10 @@
 #root {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 5px;
   text-align: center;
   width: 100vw;
+  height: 100vh;
 }
 
-header {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: space-between;
-}
-
-header p {
-  display: inline;
-  padding-right: 8px;
-  font-size: 1.4rem;
-}
